--- a/JS_portfolio_main/index.html
+++ b/JS_portfolio_main/index.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.min.css">
+    <title>Nathaniel J. Adam</title>
 </head>
 <body>
     <header class="contact-info"></header>
     <div class="navbar">
-        <ul class="nav-buttons">
-            <li class="nav">About</li>
-            <li class="nav">Projects</li>
-            <li class="nav"></li>
-            <li class="nav">contact Info</li>
-
-
+        <ul class="nav justify-content-end">
+            <li class="nav-item col-4" id="about-nav">About</li>
+            <li class="nav-item col-4" id="projects-nav">Projects</li>
+            <li class="nav-item col-4">contact Info</li>
         </ul>
     </div>
 
+    <div class="about">
+
+    </div>
+
+
+
+
+
+
+
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
