--- a/JS_portfolio_main/index.html
+++ b/JS_portfolio_main/index.html
@@ -2,21 +2,32 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/main.min.css">
     <title>Nathaniel J. Adam</title>
 </head>
 <body>
     <header class="contact-info"></header>
-    <div class="navbar">
-        <ul class="nav justify-content-end">
-            <li class="nav-item col-4" id="about-nav">About</li>
-            <li class="nav-item col-4" id="projects-nav">Projects</li>
-            <li class="nav-item col-4">contact Info</li>
+    <div class="">
+        <ul class="nav justify-content-center nav nav-pills nav-fill">
+            <li class="nav-item" id="about-nav"><a class="nav-link active" href="#">About</a></li>
+            <li class="nav-item" id="projects-nav"><a class="nav-link active" href="#">Projects</a></li>
+            <li class="nav-item" id="contact-nav"><a class="nav-link" href="#">contact Info</a> </li>
         </ul>
     </div>
 
     <div class="about">
+        <span>about place-holder</span>
+    </div>
+
+    <div class="projects">
+        <span>projects place-holder</span>
+
+    </div>
+
+    <div class="contact-info">
+        <span>contact info place-holder</span>
 
     </div>
 
@@ -25,11 +36,9 @@
 
 
 
-
-
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
